--- a/style.css
+++ b/style.css
@@ -1,13 +1,62 @@
+button.cell {
+    font-size: 1.5rem;
+    text-align: center;
+    background-color: rgb(73, 116, 172);
+}
+
+button.cell:hover {
+    /* background-color: cadetblue; */
+    color: white;
+    font-weight: 800;
+    text-shadow: 0px 0px 12px rgba(233, 249, 249, 1);
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 200px 1fr;
+    grid-auto-flow: column;
+    grid-auto-rows: auto;
+}
+
 .board {
     display: grid;
+    grid-area: 2 / 2 / 3 / 3;
     grid-template-columns: repeat(3, 50px);
     grid-template-rows: repeat(3, 50px);
     gap: 4px;
     grid-auto-flow: column;
     align-content: center;
+    margin: auto;
 }
 
-button.cell {
-    font-size: 1.5rem;
-    text-align: center;
+.players {
+    grid-area: 2 / 1 / 3 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-right: 30px;
+    gap: 20px;
+}
+
+.players div * {
+    font-size: 1.3rem;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+.buttons {
+    grid-area: 2 / 3 / 3 / 4;
+    align-content: center;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-self: left;
+    gap: 40px;
+}
+
+.active {
+    grid-area: 1 / 1 / 2 / 4;
+    justify-self: center;
 }
