--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
-button.cell {
+button.cell,
+.cell {
     font-size: 1.5rem;
     text-align: center;
     background-color: rgb(40, 161, 46);
+}
+
+h2.cell {
+    padding: 10px;
+    max-width: 25px;
+    text-align: center;
+    margin: 0 0 0 auto;
 }
 
 button.cell:hover {
@@ -43,6 +51,7 @@ button.cell:hover {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .buttons {
@@ -59,6 +68,7 @@ button.cell:hover {
 .active {
     grid-area: 1 / 1 / 2 / 4;
     justify-self: center;
+    text-align: center;
 }
 
 #favDialog {
@@ -74,8 +84,12 @@ dialog::backdrop {
     font-size: 1.2rem;
 }
 
-.inputs > * {
+.inputs>* {
     padding: 10px 0;
+}
+
+h2:last-child {
+    align-items: center;
 }
 
 .inputs input {
